Migrate infra-docker-registry to a dedicated namespace

--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/secret-certs.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/secret-certs.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: docker-registry-certs
-  namespace: default
+  namespace: {{ docker_registry.namespace }}
   labels:
     app: docker-registry
     app-component: registry
