--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: docker-registry-config
-  namespace: default
+  namespace: {{ docker_registry.namespace }}
   labels:
     app: docker-registry
     app-component: registry
