--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: docker-registry
-  namespace: default
+  namespace: {{ docker_registry.namespace }}
   labels:
     app: docker-registry
     app-component: registry
