--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/auth-delegator.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/auth-delegator.yaml.j2
@@ -10,4 +10,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: metrics-server
-  namespace: kube-system
+  namespace: {{ kubernetes_metrics_server.namespace }}
