--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/auth-reader.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/auth-reader.yaml.j2
@@ -9,6 +9,6 @@ roleRef:
   kind: Role
   name: extension-apiserver-authentication-reader
 subjects:
-- kind: ServiceAccount
-  name: metrics-server
-  namespace: kube-system
+  - kind: ServiceAccount
+    name: metrics-server
+    namespace: {{ kubernetes_metrics_server.namespace }}
