--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-apiservice.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-apiservice.yaml.j2
@@ -6,7 +6,7 @@ metadata:
 spec:
   service:
     name: metrics-server
-    namespace: kube-system
+    namespace: {{ kubernetes_metrics_server.namespace }}
   group: metrics.k8s.io
   version: v1beta1
   insecureSkipTLSVerify: true
