--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/metrics-server-deployment.yaml.j2
@@ -3,13 +3,13 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: metrics-server
-  namespace: kube-system
+  namespace: {{ kubernetes_metrics_server.namespace }}
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: metrics-server
-  namespace: kube-system
+  namespace: {{ kubernetes_metrics_server.namespace }}
   labels:
     k8s-app: metrics-server
 spec:
