--- a/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/resource-reader.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-metrics-server.deploy/app/deploy/resource-reader.yaml.j2
@@ -27,4 +27,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: metrics-server
-  namespace: kube-system
+  namespace: {{ kubernetes_metrics_server.namespace }}
