Migrate infra-kubernetes-dashboard to a dedicated namespace

--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/clusterRoleBinding.yaml.j2
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: dashboard-admin-user
-  namespace: kubernetes-dashboard
+  namespace: {{ kubernetes_dashboard.namespace }}
