--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/serviceAccount.yaml.j2
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: dashboard-admin-user
-  namespace: kubernetes-dashboard
+  namespace: {{ kubernetes_dashboard.namespace }}
