--- a/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-kubernetes-dashboard.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: dashboard
-  namespace: kubernetes-dashboard
+  namespace: {{ kubernetes_dashboard.namespace }}
   labels:
     app: kubernetes-dashboard
   annotations:
