--- a/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/infra-reloader.deploy/app/deploy/serviceAccount.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: reloader
-  namespace: default
+  namespace: {{ reloader.namespace }}
   labels:
     app: reloader
 
