--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: zonemta-mongo
-  namespace: default
+  namespace: "{{ zonemta.namespace }}"
   labels:
     app: zonemta
     app-component: mongo
