--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongodb-secret-pass.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: zonemta-mongo-pass
-  namespace: default
+  namespace: "{{ zonemta.namespace }}"
   labels:
     app: zonemta
     app-component: mongo
