--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zonemta
-  namespace: default
+  namespace: "{{ zonemta.namespace }}"
   labels:
     app: zonemta
     app-component: zonemta
