--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-service-prometheus.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zonemta-prometheus
-  namespace: default
+  namespace: "{{ zonemta.namespace }}"
   labels:
     app: zonemta
     app-component: zonemta
