Migrate infra-mailhog to a dedicated namespace

--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mailhog
-  namespace: default
+  namespace: {{ mailhog.namespace }}
   labels:
     app: mailhog
     app-component: mailhog
