--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: mailhog
-  namespace: default
+  namespace: {{ mailhog.namespace }}
   labels:
     app: mailhog
 spec:
