--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/secret.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mailhog-smtp
-  namespace: default
+  namespace: {{ mailhog.namespace }}
   labels:
     app: mailhog
     app-component: mailhog
