--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/service.yaml.j2
@@ -2,15 +2,15 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mailhog
-  namespace: default
+  namespace: {{ mailhog.namespace }}
   labels:
     app: mailhog
 spec:
   ports:
-  - port: 1025
-    name: smtp
-  - port: 8025
-    name: http
+    - port: 1025
+      name: smtp
+    - port: 8025
+      name: http
   selector:
     app: mailhog
     app-component: mailhog
