Migrate infra-docker-registry-ui to a dedicated namespace
SQUASH docker-registry-ui

--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: docker-registry-ui-config
-  namespace: default
+  namespace: {{ docker_registry_ui.namespace }}
   labels:
     app: docker-registry-ui
     app-component: docker-registry-ui
