Migrate infra-gotify to a dedicated namespace

--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: gotify
-  namespace: default
+  namespace: {{ gotify.namespace }}
   labels:
     app: gotify
   annotations:
