--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: gotify-config
-  namespace: default
+  namespace: {{ gotify.namespace }}
   labels:
     app: gotify
     app-component: gotify
