--- a/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-gotify.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: gotify
-  namespace: default
+  namespace: {{ gotify.namespace }}
   labels:
     app: gotify
     app-component: gotify
