Fix missing APCUPS namespace

--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -24,7 +24,7 @@ spec:
         name: apcups-exporter
         env:
         - name: APCUPS_ADDR
-          value: apcupsd.monitoring:3551
+          value: apcupsd.monitoring-apcups-exporter:3551
         ports:
         - containerPort: 9162
           name: metrics
