--- a/ansible/install_infra/roles/apcups/templates/kubernetes/service.yaml.j2
+++ b/ansible/install_infra/roles/apcups/templates/kubernetes/service.yaml.j2
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: apcupsd
-  namespace: monitoring
+  namespace: monitoring-apcups-exporter
   labels:
     app: apcupsd
     prometheus-target: apcupsd
