--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/secret-config.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/secret-config.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: openldap-config
-  namespace: default
+  namespace: {{ openldap.namespace }}
   labels:
     app: openldap
     app-component: openldap
