--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: openldap
-  namespace: default
+  namespace: {{ openldap.namespace }}
   labels:
     app: openldap
 spec:
