Migrate auth-phpldapadmin to a dedicated namespace

--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: phpldapadmin
-  namespace: default
+  namespace: {{ phpldapadmin.namespace }}
   labels:
     app: phpldapadmin
     app-component: phpldapadmin
