--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: phpldapadmin
-  namespace: default
+  namespace: {{ phpldapadmin.namespace }}
   labels:
     app: phpldapadmin
 spec:
