--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/secret-config.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/secret-config.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: phpldapadmin-config
-  namespace: default
+  namespace: {{ phpldapadmin.namespace }}
   labels:
     app: phpldapadmin
     app-component: phpldapadmin
