--- a/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/auth-phpldapadmin.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: phpldapadmin
-  namespace: default
+  namespace: {{ phpldapadmin.namespace }}
   labels:
     app: phpldapadmin
 spec:
