Migrate auth-lemonldap to a dedicated namespace

--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: lemonldap-manager
-  namespace: default
+  namespace: {{ lemonldap.namespace }}
   labels:
     app: lemonldap
   annotations:
