--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/lmconf-configMap.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/lmconf-configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: lemonldap-lmconf
-  namespace: default
+  namespace: {{ lemonldap.namespace }}
   labels:
     app: lemonldap
     app-component: lemonldap
