--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service-handler.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service-handler.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: lemonldap-handler
-  namespace: default
+  namespace: {{ lemonldap.namespace }}
   labels:
     app: lemonldap
 spec:
