--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/daemonSet.yaml.j2
@@ -37,7 +37,7 @@ spec:
             name: metrics
         env:
         - name: FLUENT_FLUENTD_HOST
-          value: "fluentd"
+          value: "{{ fluentd.servername }}"
         - name: FLUENT_FLUENTD_PORT
           value: "24224"
         volumeMounts:
