--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/configMap-config.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/configMap-config.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fluentd-config
-  namespace: logging
+  namespace: {{ fluentd.namespace }}
   labels:
     app: fluentd
     app-component: fluentd
