--- a/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentd.deploy/app/deploy/service.yaml.j2
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: fluentd
-  namespace: logging
+  namespace: {{ fluentd.namespace }}
   labels:
     app: fluentd
 spec:
