Migrate logging-fluentbit to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/fluent-bit.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/fluent-bit.yaml.j2
@@ -12,7 +12,7 @@ spec:
     path: /api/v1/metrics/prometheus
   namespaceSelector:
     matchNames:
-    - logging
+    - {{ fluentbit.namespace }}
   selector:
     matchLabels:
       prometheus-target: fluent-bit
