--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/clusterRoleBinding.yaml.j2
@@ -9,4 +9,4 @@ roleRef:
 subjects:
   - kind: ServiceAccount
     name: fluent-bit
-    namespace: logging
+    namespace: {{ fluentbit.namespace }}
