--- a/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/logging-fluentbit.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: fluent-bit-config
-  namespace: logging
+  namespace: {{ fluentbit.namespace }}
   labels:
     app: fluent-bit
     app-component: fluent-bit
