Migrate logging-kibana to a dedicated namespace

--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kibana
-  namespace: logging
+  namespace: {{ kibana.namespace }}
   labels:
     app: kibana
     app-component: kibana
