--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: kibana
-  namespace: logging
+  namespace: {{ kibana.namespace }}
   labels:
     app: kibana
     app-component: kibana
