--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: kibana
-  namespace: logging
+  namespace: {{ kibana.namespace }}
   labels:
     app: kibana
 spec:
