--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: kibana
-  namespace: logging
+  namespace: {{ kibana.namespace }}
   labels:
     app: kibana
 spec:
