--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/deploy/prometheus_exporter/service-prometheus.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: elasticsearch-exporter
-  namespace: logging
+  namespace: {{ elasticsearch.namespace }}
   labels:
     app: elasticsearch
     app-component: elastic-exporter
