--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/elastic-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/elastic-exporter.yaml.j2
@@ -11,7 +11,7 @@ spec:
     port: metrics
   namespaceSelector:
     matchNames:
-    - logging
+    - {{ elasticsearch.namespace }}
   selector:
     matchLabels:
       prometheus-target: elastic-exporter
