Fix prometheus service-monitors namespaces

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/docker-registry.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/docker-registry.yaml.j2
@@ -18,7 +18,7 @@ spec:
     path: /metrics
   namespaceSelector:
     matchNames:
-    - default
+    - {{ docker_registry.namespace }}
   selector:
     matchLabels:
       prometheus-target: docker-registry
