--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/zone-mta.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/zone-mta.yaml.j2
@@ -11,7 +11,7 @@ spec:
     port: metrics
   namespaceSelector:
     matchNames:
-    - default
+    - {{ zonemta.namespace }}
   selector:
     matchLabels:
       prometheus-target: zonemta
