Migrate monitoring-kube-state-metrics to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/deployment.yaml.j2
@@ -5,7 +5,7 @@ metadata:
     app: kube-state-metrics
     app-component: kube-state-metrics
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ kube_state_metrics.namespace }}
 spec:
   replicas: 1
   selector:
