--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/kube-state-metrics.yaml.j2
@@ -31,6 +31,9 @@ spec:
     tlsConfig:
       insecureSkipVerify: true
   jobLabel: k8s-app
+  namespaceSelector:
+    matchNames:
+    - {{ kube_state_metrics.namespace }}
   selector:
     matchLabels:
       prometheus-target: kube-state-metrics
