--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRoleBinding.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/clusterRoleBinding.yaml.j2
@@ -9,4 +9,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ kube_state_metrics.namespace }}
