--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/role.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/role.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ kube_state_metrics.namespace }}
 rules:
 - apiGroups:
   - ""
