--- a/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-kube-state-metrics.deploy/app/deploy/serviceAccount.yaml.j2
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: kube-state-metrics
-  namespace: monitoring
+  namespace: {{ kube_state_metrics.namespace }}
