Migrate monitoring-node-exporter to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -5,7 +5,7 @@ metadata:
     app: node-exporter
     app-component: node-exporter
   name: node-exporter
-  namespace: monitoring
+  namespace: {{ node_exporter.namespace }}
 spec:
   selector:
     matchLabels:
