--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/service.yaml.j2
@@ -5,7 +5,7 @@ metadata:
     k8s-app: node-exporter
     prometheus-target: node-exporter
   name: node-exporter
-  namespace: monitoring
+  namespace: {{ node_exporter.namespace }}
 spec:
   clusterIP: None
   ports:
