--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/node-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/node-exporter.yaml.j2
@@ -21,6 +21,9 @@ spec:
     tlsConfig:
       insecureSkipVerify: true
   jobLabel: k8s-app
+  namespaceSelector:
+    matchNames:
+    - {{ node_exporter.namespace }}
   selector:
     matchLabels:
       prometheus-target: node-exporter
