--- a/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-node-exporter.deploy/app/deploy/serviceAccount.yaml.j2
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: node-exporter
-  namespace: monitoring
+  namespace: {{ node_exporter.namespace }}
