Migrate monitoring-nginx-exporter to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nginx-exporter
-  namespace: monitoring
+  namespace: {{ nginx_exporter.namespace }}
   labels:
     app: nginx-exporter
     app-component: nginx-exporter
