--- a/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-exporter.deploy/app/deploy/service-prometheus.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx-exporter-prometheus
-  namespace: monitoring
+  namespace: {{ nginx_exporter.namespace }}
   labels:
     app: nginx-exporter
     app-component: nginx-exporter
