Migrate monitoring-nginx-log-exporter to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-log-exporter-config
-  namespace: monitoring
+  namespace: {{ nginx_log_exporter.namespace }}
   labels:
     app: nginx-log-exporter
     app-component: nginx-log-exporter
