--- a/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-nginx-log-exporter.deploy/app/deploy/daemonSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: DaemonSet
 metadata:
   name: nginx-log-exporter
-  namespace: monitoring
+  namespace: {{ nginx_log_exporter.namespace }}
   labels:
     app: nginx-log-exporter
     app-component: nginx-log-exporter
