Migrate monitoring-gluster-exporter to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/endpoint.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/endpoint.yaml.j2
@@ -3,7 +3,7 @@ kind: Endpoints
 apiVersion: v1
 metadata:
   name: gluster-exporter
-  namespace: monitoring
+  namespace: {{ gluster_exporter.namespace }}
 subsets:
 {% for glusterfs_node in groups['glusterfs_servers'] | map('extract', hostvars, ['ansible_host']) %}
 - addresses:
