--- a/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/service.yaml.j2
@@ -3,7 +3,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: gluster-exporter
-  namespace: monitoring
+  namespace: {{ gluster_exporter.namespace }}
   labels:
     app: gluster-exporter
     prometheus-target: gluster-exporter
