--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gluster.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gluster.yaml.j2
@@ -9,6 +9,9 @@ spec:
   endpoints:
   - interval: {{ (30 * service_monitors.interval_factor | float) | int }}s
     port: metrics
+  namespaceSelector:
+    matchNames:
+    - {{ gluster_exporter.namespace }}
   selector:
     matchLabels:
       prometheus-target: gluster-exporter
