Migrate monitoring-release-watcher to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
@@ -11,7 +11,7 @@ spec:
       port: metrics
   namespaceSelector:
     matchNames:
-      - monitoring
+      - {{ release_watcher.namespace }}
   selector:
     matchLabels:
       prometheus-target: release-watcher
