--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: release-watcher
-  namespace: monitoring
+  namespace: {{ release_watcher.namespace }}
   labels:
     app: release-watcher
     app-component: release-watcher
