--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: release-watcher-config
-  namespace: monitoring
+  namespace: {{ release_watcher.namespace }}
   labels:
     app: release-watcher
     app-component: release-watcher
