Migrate monitoring-apcups-exporter to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/deployment.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: apcups-exporter
-  namespace: monitoring
+  namespace: {{ apcups_exporter.namespace }}
   labels:
     app: apcups-exporter
     app-component: apcups-exporter
