--- a/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/service-prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-apcups-exporter.deploy/app/deploy/service-prometheus.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: apcups-exporter-prometheus
-  namespace: monitoring
+  namespace: {{ apcups_exporter.namespace }}
   labels:
     app: apcups-exporter
     app-component: apcups-exporter
