--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/apcups.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/apcups.yaml.j2
@@ -11,7 +11,7 @@ spec:
     port: metrics
   namespaceSelector:
     matchNames:
-    - monitoring-apcups-exporter
+    - {{ apcups_exporter.namespace }}
   selector:
     matchLabels:
       prometheus-target: apcups-exporter
