Migrate monitoring-prometheus to a dedicated namespace

--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/datasources/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/datasources/prometheus.yaml.j2
@@ -6,4 +6,4 @@ datasources:
     access: proxy
     editable: false
     type: prometheus
-    url: http://prometheus-k8s.monitoring.svc:9090
+    url: http://{{ prometheus.servername }}:9090
