--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/alertmanager/service.yaml.j2
@@ -6,7 +6,7 @@ metadata:
     alertmanager: main
     prometheus-target: alertmanager-main
   name: alertmanager-main
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
 spec:
   ports:
   - name: web
