--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: prometheus
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
   labels:
     app: prometheus
   annotations:
