--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/serviceAccount.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/serviceAccount.yaml.j2
@@ -6,4 +6,4 @@ metadata:
     app.kubernetes.io/name: prometheus-operator
     app.kubernetes.io/version: v0.33.0
   name: prometheus-operator
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
