--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/release-watcher.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: release-watcher
   name: release-watcher
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
 spec:
   endpoints:
     - interval: {{ (120 * service_monitors.interval_factor | float) | int }}s
