--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/datasources-secret.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/datasources-secret.yaml.j2
@@ -8,4 +8,4 @@ metadata:
     app-component: grafana
 type: Opaque
 data:
-  prometheus.yaml: {{ lookup('file', role_path + '/app/config/datasources/prometheus.yaml') | b64encode }}
+  prometheus.yaml: {{ lookup('template', role_path + '/app/config/datasources/prometheus.yaml.j2') | b64encode }}
