--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/service.yaml.j2
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/version: v0.33.0
     prometheus-target: prometheus-operator
   name: prometheus-operator
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
 spec:
   clusterIP: None
   ports:
