--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/nginx-exporter.yaml.j2
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: nginx-exporter
   name: nginx-exporter
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
 spec:
   endpoints:
   - interval: {{ (15 * service_monitors.interval_factor | float) | int }}s
