--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/prometheus-operator.yaml.j2
@@ -7,7 +7,7 @@ metadata:
     app.kubernetes.io/version: {{ prometheus_operator.base_image.tag }}
     app: prometheus-operator
   name: prometheus-operator
-  namespace: monitoring
+  namespace: {{ prometheus.namespace }}
 spec:
   endpoints:
   - honorLabels: true
