--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/dashboards-configMap.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/dashboards-configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboards-config
-  namespace: monitoring
+  namespace: {{ grafana.namespace }}
   labels:
     app: grafana
     app-component: grafana
