--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/datasources-secret.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/datasources-secret.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: grafana-datasources
-  namespace: monitoring
+  namespace: {{ grafana.namespace }}
   labels:
     app: grafana
     app-component: grafana
