--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: grafana
-  namespace: monitoring
+  namespace: {{ grafana.namespace }}
   labels:
     app: grafana
   annotations:
