--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/service.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: grafana
-  namespace: monitoring
+  namespace: {{ grafana.namespace }}
   labels:
     app: grafana
     prometheus-target: grafana
