--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/statefulSet.yaml.j2
@@ -5,7 +5,7 @@ metadata:
     app: grafana
     app-component: grafana
   name: grafana
-  namespace: monitoring
+  namespace: {{ grafana.namespace }}
   annotations:
     reloader.stakater.com/auto: "true"
 spec:
