--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gitlab.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/service-monitors/gitlab.yaml.j2
@@ -105,7 +105,7 @@ spec:
     path: /metrics
   namespaceSelector:
     matchNames:
-    - default
+    - {{ gitlab.namespace }}
   selector:
     matchLabels:
       prometheus-target: gitlab
