Migrate web-ttrss to a dedicated namespace

--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ttrss
-  namespace: default
+  namespace: {{ ttrss.namespace }}
   labels:
     app: ttrss
 spec:
