--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: ttrss-config
-  namespace: default
+  namespace: {{ ttrss.namespace }}
   labels:
     app: ttrss
     app-component: ttrss
