Migrate web-heimdall to a dedicated namespace

--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/configMap.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: heimdall-config
-  namespace: default
+  namespace: {{ heimdall.namespace }}
   labels:
     app: heimdall
     app-component: heimdall
