--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/ingress.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: heimdall
-  namespace: default
+  namespace: {{ heimdall.namespace }}
   labels:
     app: heimdall
 spec:
