--- a/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/deploy/statefulSet.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: heimdall
-  namespace: default
+  namespace: {{ heimdall.namespace }}
   labels:
     app: heimdall
     app-component: heimdall
